--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li>
 							<a href="https://chrome.google.com/webstore/detail/nudge/hnlfpbcpjlpcpelnjehoggfhbkjclnlh?authuser=2" class="button n01">Download</a>
 						</li><li>
-							<a href="https://abtnudge.carrd.co/" class="button n02">More Info</a>
+							<a href="about.html" class="button n02">More Info</a>
 						</li>
 					</ul>
 					<ul class="icons" id="icons01">
