New Update Jan 4th
- Added test notification functionality on the “About” page

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 					</div>
 					<h1 id="text02">About Nudge</h1>
 					<hr id="divider02" />
-					<p id="text01"><span>tl;dr Nudge sends desktop notifications when </span><br /><span>you are unproductive. They look like this:</span></p>
+					<p id="text01"><span>tl;dr Nudge sends desktop notifications when </span><br /><span>you are unproductive. They look like <a id="myLink" href="#" onclick="onStart()">this</a>:</span></p>
 					<div class="image" id="image01">
 						<img src="Aboutassets/images/image01.png" alt="" />
 					</div>
