Added Different memes
- There’s code there but the randomize function doesn’t run on document
load

--- a/memezone.html
+++ b/memezone.html
@@ -20,7 +20,7 @@
 					<h1 id="text02">Meme Zone</h1>
 					<hr id="divider02" />
 					<div class="image" id="image02">
-						<img src="MSassets/images/image02.png" alt="" />
+						<img src="1.jpg" name="img" />
 					</div>
 					<ul class="icons" id="icons01">
 						<li>
