--- a/memezone.html
+++ b/memezone.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="MSassets/main.css" />
 		<noscript><link rel="stylesheet" href="MSassets/noscript.css" /></noscript>
 	</head>
-	<body class="is-loading">
+	<body class="is-loading" onload="displayImage();">
 		<div id="wrapper">
 			<div id="main">
 				<div class="inner">
